tests/transpiler/x/zig/typed_var.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/typed_var.zig:6:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/typed_var.zig:4:15: note: function cannot return an error
