tests/transpiler/x/zig/typed_var.zig
// Generated by Mochi Zig transpiler v0.10.31 on 2025-07-20 02:32 +0000
const std = @import("std");

pub fn main() void {
    var x: i64 = 0;
    std.debug.print("{any}\n", .{x});
}
